   - Add CoPP support for DHCP relay.
   - SSL/TLS:
     * Support for deprecated TLSv1 and TLSv1.1 protocols on OpenFlow and
       database connections is now removed.
   - Introduce exclude-router-ips-from-garp in logical_switch_port column
     so that the router port IPs are not advertised in the GARPs.
   - Added support for port mirroring in OVN overlay.

OVN v25.03.0 - 07 Mar 2025
--------------------------
   - Added support to choose selection methods - dp_hash or
     hash (with specified hash fields) for ECMP routes
     while choosing nexthop.
   - ovn-ic: Add support for route tag to prevent route learning.
   - Support for STT tunnels in ovn-encap-type is deprecated and will be
     removed in the next release.
   - The LRP option 'centralize_routing' has been removed. The behavior is now
     enabled in all cases where it is needed.
   - ovn-nb: Changed schema of ovn-nb to make networks optional within Logical
     Router Ports.
   - Added support for Spine-Leaf topology of logical switches by adding
     a new LSP type 'switch' that can directly connect two logical switches.
     Supported for both distributed and transit switches.
   - Bump python version required for building OVN to 3.7.
   - SSL/TLS:
     * TLSv1 and TLSv1.1 protocols are deprecated and disabled by default
       on OpenFlow and database connections.  Use --ssl-protocols to turn
       them back on.  Support will be fully removed in the next release.
     * OpenSSL 1.1.1 or newer is now required for SSL/TLS support.
     * The protocol list in --ssl-protocols or corresponding database column
       now supports specifying simple protocol ranges like:
         - "TLSv1-TLSv1.2" to enable all protocols between TLSv1 and TLSv1.2.
         - "TLSv1.2+" to enable protocol TLSv1.2 and later.
       The value must be a list of protocols or exactly one protocol range.
     * Added explicit support for TLSv1.3.  It can now be enabled via