@@ -20,6 +20,9 @@ Post v25.03.0
    - Introduce exclude-router-ips-from-garp in logical_switch_port column
      so that the router port IPs are not advertised in the GARPs.
    - Added support for port mirroring in OVN overlay.
+   - Add a new logical switch option - enable-stateless-acl-lb with default
+     value of false. This option should be set to true for logical switch
+     with stateless ACL to work with load balancer.
 
 OVN v25.03.0 - 07 Mar 2025
 --------------------------
